--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,6 @@
-/build
+/build/generated
+/build/intermediates
+/build/tmp/
+/build/outputs/logs
+/build/outputs/apk/androidTest
+/build/outputs/apk/debug/*.json
