--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,7 @@
         android:theme="@style/Theme.EasyTax"
         tools:targetApi="31">
         <activity
-            android:name=".SelectorPaymentLadderActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainCalculateActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SelectorActivity"
-            android:exported="false" />
-        <activity
-            android:name=".UserNameActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity2"
+            android:name=".GetUserNameActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
